Get participation in crowdaction
