# docs/api.yml
@@ -95,6 +95,53 @@ paths:
                   example: error
 
   /crowdactions/{crowdactionID}/participation:
+    get:
+      tags:
+        - "Crowdaction"
+      summary: "Get participating in a particular crowdaction"
+      parameters:
+      - name: "crowdactionID"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        default:
+          description: "Success message"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  userID:
+                    type: string
+                  name:
+                    type: string
+                    description: "Displayname of the user"
+                  crowdactionID:
+                    type: string
+                  commitments:
+                    type: array
+                    items:
+                      type: string
+                    example: ["vegetarian", "no-dairy"]
+                    description: Array of commitment ids
+                  date:
+                    type: string
+                    pattern: \d{4}-\d{2}-\d{2}
+                    example: "2006-01-02"
+        404:
+          description: "Not found (not participating)"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "not participating"
+      security:
+      - FirebaseAuthorizer: []
     delete:
       tags:
         - "Crowdaction"
